<resources>

    <string name="app_name">Just Balance</string>
    <!--Title Screen-->
    <string name="title_button">Begin</string>
    <!--Balance Screen-->
    <string name="balance_title">Just Balance</string>
    <string name="your_balances">Your Balances</string>
    <string name="add_balance_button">Add a Balance</string>
    <string name="edit_balance_button">Edit</string>
    <string name="total_balance">Total Balance: %.2f"</string>
    <string-array name="filter_array">
        <item>A-Z</item>
        <item>$-$$</item>
        <item>$$-$</item>
    </string-array>


    <!--RecyclerView-->
    <string name="balance_amount">: %.2d</string>

    <!--Add Balance Screen-->
    <string name="enter_balance_name_text">Enter Balance Name:</string>
    <string name="enter_balance_amount_text">Enter Balance Amount:</string>
    <string name="balance_name_required_text">Balance Name (Required)</string>
    <string name="balance_amount_required_text">Balance Amount (Required)</string>
    <string name="balance_error">Balance name required</string>
    <string name="balance_amount_error">Balance amount required</string>


    <!--Bottom Navigation-->
    <string name="balance_icon_title">Balances</string>
    <string name="add_a_balance_icon_title">Add a Balance</string>
    <string name="home_icon_title">Home</string>

    <!--Balance Info-->
    <string name="record_payment">Record Payment</string>
    <string name="your_payments_text">Your Payments</string>
    <string name="no_payments_yet">No Payments Yet</string>
    <string name="balance_info_current_amount">Current Balance: %.2f</string>
    <string name="balance_info_starting_amount">Starting Balance: %.2f</string>

    <!--Payment Screen-->
    <string name="payment_amount_required">Payment Amount (Required)</string>

    <!--Payment Info-->
    <string name="delete_payment">Delete Payment</string>

    <!--___________ACTION BAR___________-->
    <string name="action_bar">Add a Balance</string>

    <!--___________LOGIN SCREEN___________-->
    <string name="JB_login_title">Just Balance Login</string>
    <string name="email_address_required_text">Email Address (Required)</string>
    <string name="enter_your_email_hint">Enter your email address</string>
    <string name="password_required_text">Password (Required)</string>
    <string name="enter_your_password_hint">Enter your password</string>
    <string name="login_button">Log In</string>
    <string name="invalid_email">Please use a valid email address.</string>
    <string name="incorrect_email_or_password">Incorrect email address or password.</string>
    <string name="too_many_attempts">Too many attempts. Wait before trying\nagain.</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="create_jb_Account">Create Just Balance Account</string>
    <string name="email_not_verified_error">Email must be verified to login.\n</string>
    <string name="resend_email_verification_error">Resend verification email.</string>

    <!--___________CREATE ACCOUNT SCREEN___________-->
    <string name="password_length_warning">Passwords must have a minimum of 8 characters and contain uppercase and lowercase letters and a number.</string>
    <string name="team_name_required">Team Name (Required)</string>
    <string-array name="teams_array">
        <item>None</item>
        <item>Android</item>
        <item>iOS</item>

    </string-array>
    <string name="terms_and_conditions_text">By registering, I confirm that I am\nat least 18 years old and have\nread
        and agree to the <a href="https://termsandconditions.pg.com/en-us/">Terms and\nConditions</a>
        and <a href="https://www.pg.com/privacy/english/privacy_notice.shtml">Privacy Policy</a>.</string>
    <string name="JB_account_already_exists">A JB account with this email address already\nexists.</string>
    <string name="verification_email_sent_message">Verification email sent.</string>
    <string name="verification_email_sent_error_message">Failed to send verification email.</string>
    <string name="something_went_wrong_error_message">Something went wrong.Try again.</string>

    <!--SETTINGS-->
    <string name="user_email_text">Email Address: %s</string>


</resources>