<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="addBalanceViewModel"
            type="com.pg.justbalance.screens.add.AddBalanceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/balance_amount_editText"
            android:layout_width="188dp"
            android:layout_height="46dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="94dp"
            android:ems="10"
            android:hint="@string/enter_balance_amount_text"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/add_balance_confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance_name_editText" />

        <EditText
            android:id="@+id/balance_name_editText"
            android:layout_width="180dp"
            android:layout_height="43dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="224dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="21dp"
            android:contentDescription="@string/enter_balance_name_text"
            android:ems="10"
            android:hint="@string/enter_balance_name_text"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/balance_amount_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_balance_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginEnd="167dp"
            android:layout_marginBottom="312dp"
            android:backgroundTint="@color/blue"
            android:text="@string/add_balance_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance_amount_editText"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>